	* lib/rubygems/command_manager.rb (Gem::CommandManager#load_and_instantiate):
	Don't infinitely loop in retry.
	* bin/gemri: Removed.  Everybody should have ri integration now.
	* lib/rubygems/config_file.rb: Allow settings to be examined.  Pull
	verbose from .gemrc.
	* lib/rubygems/commands/environment_command.rb: Add ruby executable
	and configuration settings to `gem env`.

2007-07-22  Chad Fowler  <chad@chadfowler.com>

        * lib/rubygems/gem_commands.rb: Added another example to the gem example output
        (Gile Bowkett)
        * test/test_documentation_generation.rb, lib/rubygems/doc_manager.rb: Added a test for
        documentation generation and fixed a bug when doc location is not writable.

2007-06-16  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/gem_path_searcher.rb (Gem::GemPathSearcher): Moved out
	of lib/rubygems/custom_require.rb and added tests.

2007-06-02  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/source_info_cache.rb (Gem::try_file): Fix for issue
	where a non-existing source cache file causes the gem command to
	not find a gem.  This fixes it by marshalling out an empty
	hash.  (Thanks to Nick Sieger for this fix).

2007-06-01  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems.rb
	(Gem::OperationNotSupportedError::latest_partials): Changed from
	match data style to $1 style regexp (on the recommendation of
	better performance).

2007-05-30  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/source_index.rb (Gem::SourceIndex::update):
	Modified to get the bulk_threshhold from the configuration.
	(Gem::SourceIndex::convert_specs): Ryan removed the "reduce_specs"
	method because it is not needed any more and is creating memory
	overhead.

	* lib/rubygems/config_file.rb (Gem::ConfigFile): Added
	bulk_threshhold field to ConfigFile.
	(Gem::ConfigFile::initialize): Initialize bulk threshhold to 500.

	* lib/rubygems/command.rb
	(Gem::Command::specific_extra_args_hash): Added