@@ -10,7 +10,6 @@ end
 module Gem::Indexer
 end
 
-require 'rubygems/indexer/announcer'
 require 'rubygems/indexer/compressor'
 require 'rubygems/indexer/abstract_index_builder'
 require 'rubygems/indexer/master_index_builder'
